<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".WorkoutActivity"
    android:background="@color/bg">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Front Squat"
        app:layout_constraintBottom_toTopOf="@id/main_img"/>

    <ImageView
        android:id="@+id/main_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/img_wk_dm"
        app:layout_constraintBottom_toTopOf="@id/exercise_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/exercise_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/ex_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_img" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ex_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bg"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercise_txt"
        app:layout_constraintBottom_toTopOf="@id/muscle_groups">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/c2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/i1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/bg_med"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_refresh_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/t1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/kg"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/t2"
                app:layout_constraintStart_toEndOf="@id/i1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/t1"
                app:layout_constraintTop_toBottomOf="@id/t1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/c3"
            app:layout_constraintStart_toEndOf="@id/c1"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/i2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/bg_med"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_refresh_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/t3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ten"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/t3"
                app:layout_constraintStart_toEndOf="@id/i2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reps"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/t3"
                app:layout_constraintTop_toBottomOf="@id/t3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/c3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/c2"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/i3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/bg_med"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_refresh_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/t5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/t5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_4"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/t6"
                app:layout_constraintStart_toEndOf="@id/i3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/t6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/t5"
                app:layout_constraintTop_toBottomOf="@id/t5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/muscle_groups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/muscle_groups"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ex_layout"
        app:layout_constraintBottom_toTopOf="@id/musc1"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/musc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/white_bg"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/quadriceps"
        android:textSize="13sp"
        app:backgroundTint="#46828188"
        app:layout_constraintBottom_toTopOf="@id/history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/muscle_groups" />

    <TextView
        android:id="@+id/musc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/white_bg"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textSize="13sp"
        android:text="@string/gluteus_maximus"
        app:backgroundTint="#46828188"
        app:layout_constraintStart_toEndOf="@id/musc1"
        app:layout_constraintTop_toTopOf="@id/musc1" />


    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/musc1"
        app:layout_constraintBottom_toTopOf="@id/c4"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/c5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/i4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_bg"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:src="@drawable/ic_baseline_refresh_24"
            android:text="@string/_54"
            android:textColor="@color/blu"
            android:textSize="24sp"
            app:backgroundTint="#46828188"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/h1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/completed_sets"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/h2"
            app:layout_constraintStart_toEndOf="@id/i4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_per_week"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/h1"
            app:layout_constraintTop_toBottomOf="@id/h1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/c4"
        app:layout_constraintTop_toBottomOf="@id/history"
        app:layout_constraintBottom_toBottomOf="@id/c4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/i5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_bg"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            android:src="@drawable/ic_baseline_refresh_24"
            android:text="@string/_55_kg"
            android:textColor="@color/blu"
            android:textSize="30sp"
            android:textStyle="bold"
            android:backgroundTint="#46828188"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/h3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/blu"
                android:text="@string/_55"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tired"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/kgg"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/blu"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/average_weight"
            android:textSize="16sp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/h4"
            app:layout_constraintStart_toEndOf="@id/i5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/h3"
            app:layout_constraintTop_toBottomOf="@id/h3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>